--- a/manager/app/src/main/res/values-ru/strings.xml
+++ b/manager/app/src/main/res/values-ru/strings.xml
@@ -1,16 +1,18 @@
 <resources>
+    <string name="app_name" translatable="false">KernelSU</string>
+
     <string name="home">Главная</string>
     <string name="home_not_installed">Не установлен</string>
     <string name="home_click_to_install">Нажмите чтобы установить</string>
     <string name="home_working">Работает</string>
     <string name="home_working_version">Версия: %d</string>
-    <string name="home_superuser_count">Superusers: %d</string>
+    <string name="home_superuser_count">Суперпользователи: %d</string>
     <string name="home_module_count">Модули: %d</string>
     <string name="home_unsupported">Не поддерживается</string>
     <string name="home_unsupported_reason">KernelSU поддерживает только GKI ядра</string>
 
     <string name="home_kernel">Ядро</string>
-    <string name="home_manager_version">Версия</string>
+    <string name="home_manager_version">Версия менеджера</string>
     <string name="home_fingerprint">Подпись</string>
 
     <string name="home_selinux_status">Состояние SELinux</string>
@@ -18,7 +20,7 @@
     <string name="selinux_status_enforcing">Принудительный</string>
     <string name="selinux_status_permissive">Разрешающий</string>
     <string name="selinux_status_unknown">Неизвестно</string>
-    <string name="superuser">Superuser</string>
+    <string name="superuser">Суперпользователь</string>
     <string name="module_failed_to_enable">Не удалось включить модуль: %s</string>
     <string name="module_failed_to_disable">Не удалось отключить модуль: %s</string>
     <string name="module_empty">Нет установленных модулей</string>
@@ -26,32 +28,47 @@
     <string name="module">Модули</string>
     <string name="uninstall">Удалить</string>
     <string name="module_install">Установить</string>
-    <string name="install">Установить</string>
-    <string name="reboot">Перезагрузка</string>
+    <string name="install">Установка</string>
+    <string name="reboot">Перезагрузить</string>
     <string name="settings">Настройки</string>
-    <string name="reboot_userspace">Soft Reboot</string>
-    <string name="reboot_recovery">Reboot to Recovery</string>
-    <string name="reboot_bootloader">Reboot to Bootloader</string>
-    <string name="reboot_download">Reboot to Download</string>
-    <string name="reboot_edl">Reboot to EDL</string>
-    <string name="about">О KernelSU</string>
+    <string name="reboot_userspace">Мягкая перезагрузка</string>
+    <string name="reboot_recovery">Перезагрузить в Recovery</string>
+    <string name="reboot_bootloader">Перезагрузить в Bootloader</string>
+    <string name="reboot_download">Перезагрузить в Download</string>
+    <string name="reboot_edl">Перезагрузить в EDL</string>
+    <string name="about">О приложении</string>
     <string name="module_uninstall_confirm">Вы уверены, что хотите удалить модуль %s?</string>
     <string name="module_uninstall_success">%s удален</string>
     <string name="module_uninstall_failed">Не удалось удалить: %s</string>
     <string name="module_version">Версия</string>
     <string name="module_author">Автор</string>
-    <string name="module_overlay_fs_not_available">overlayfs выключен, модуль не будет работать!</string>
+    <string name="module_overlay_fs_not_available">overlayfs недоступен, модуль не может работать!</string>
     <string name="refresh">Обновить</string>
     <string name="show_system_apps">Показать системные приложения</string>
     <string name="hide_system_apps">Скрыть системные приложения</string>
     <string name="send_log">Отправить лог</string>
     <string name="safe_mode">Безопасный режим</string>
-    <string name="reboot_to_apply">Перезагрузите, чтобы вступить в силу</string>
-    <string name="module_magisk_conflict">Модули отключены, потому что они конфликтуют с модулями Magisk!</string>
+    <string name="reboot_to_apply">Перезагрузите, чтобы изменения вступили в силу</string>
+    <string name="module_magisk_conflict">Модули отключены, потому что они конфликтуют с Magisk!</string>
     <string name="home_learn_kernelsu">Узнайте о KernelSU</string>
     <string name="home_learn_kernelsu_url">https://kernelsu.org/guide/what-is-kernelsu.html</string>
     <string name="home_click_to_learn_kernelsu">Узнайте, как установить KernelSU и использовать модули</string>
     <string name="home_support_title">Поддержите нас</string>
     <string name="home_support_content">KernelSU был и всегда будет бесплатным и открытым проектом. Однако Вы всегда можете поддержать нас, отправив небольшое пожертвование.</string>
-    <string name="about_source_code"><![CDATA[Посмотреть исходники на %1$s<br/>Присоединяйтесь к каналу %2$s]]></string>
+    <string name="about_source_code"><![CDATA[Посмотреть исходный код на %1$s<br/>Присоединяйтесь к нашему %2$s каналу]]></string>
+    <string name="profile">Профиль приложения</string>
+    <string name="profile_default">По умолчанию</string>
+    <string name="profile_template">Шаблон</string>
+    <string name="profile_custom">Пользовательский</string>
+    <string name="profile_name">Название профиля</string>
+    <string name="profile_namespace">Монтировать пространство имен</string>
+    <string name="profile_namespace_inherited">Унаследованный</string>
+    <string name="profile_namespace_global">Глобальный</string>
+    <string name="profile_namespace_individual">Индивидуальный</string>
+    <string name="profile_umount_modules">Размонтировать модули</string>
+    <string name="failed_to_update_app_profile">Не удалось обновить профиль приложения для %s</string>
+    <string name="require_kernel_version">Текущая версия ядра %d слишком низкая для правильной работы менеджера. Пожалуйста, обновитесь до версии %d или выше!</string>
+    <string name="settings_umount_modules_default">Размонтировать модули по умолчанию</string>
+    <string name="settings_umount_modules_default_summary">Глобальное значение по умолчанию для \"Размонтировать модули\" в профилях приложений. При включении будут удалены все модификации модулей в системе для приложений, у которых не задан профиль.</string>
+    <string name="profile_umount_modules_summary">Включение этой опции позволит KernelSU восстанавливать любые измененные модулями файлы для данного приложения.</string>
 </resources>
