manager: support module update online

--- a/manager/app/src/main/res/values-zh-rCN/strings.xml
+++ b/manager/app/src/main/res/values-zh-rCN/strings.xml
@@ -58,4 +58,8 @@
     <string name="settings_umount_modules_default">默认卸载模块</string>
     <string name="settings_umount_modules_default_summary">App Profile 中\"卸载模块\"的全局默认值，如果启用，将会为没有设置 Profile 的应用移除所有模块针对系统的修改</string>
     <string name="profile_umount_modules_summary">启用后将允许 KernelSU 为本应用还原被模块修改过的文件</string>
+    <string name="profile_selinux_domain">域</string>
+    <string name="profile_selinux_rules">规则</string>
+    <string name="module_update">更新</string>
+    <string name="module_downloading">正在下载模块：%s</string>
 </resources>
