--- a/manager/app/src/main/res/values/strings.xml
+++ b/manager/app/src/main/res/values/strings.xml
@@ -83,4 +83,5 @@
     <string name="launch_app">Launch</string>
     <string name="force_stop_app">Force Stop</string>
     <string name="restart_app">Restart</string>
+    <string name="failed_to_update_sepolicy">Failed to update SELinux rules for: %s</string>
 </resources>
