--- a/manager/app/src/main/res/values-tr/strings.xml
+++ b/manager/app/src/main/res/values-tr/strings.xml
@@ -48,7 +48,7 @@
     <string name="safe_mode">Güvenli mod</string>
     <string name="reboot_to_apply">Etkili olması için yeniden başlat</string>
     <string name="module_magisk_conflict">Modüller Magisk ile çakıştığı için devre dışı bırakıldı!</string>
-    <string name="home_learn_kernelsu">KernelSU\'yu Öğrenin</string>
+    <string name="home_learn_kernelsu">KernelSU\'yu öğren</string>
     <string name="home_learn_kernelsu_url">https://kernelsu.org/guide/what-is-kernelsu.html</string>
     <string name="home_click_to_learn_kernelsu">KernelSU\'yu nasıl kuracağınızı ve modülleri nasıl kullanacağınızı öğrenin</string>
     <string name="home_support_title">Bizi destekle</string>
@@ -78,4 +78,8 @@
     <string name="module_downloading">Modül indiriliyor: %s</string>
     <string name="module_start_downloading">İndirme başladı: %s</string>
     <string name="new_version_available">Yeni versiyon: %s mevcut, indirmek için tıklayın</string>
+    <string name="launch_app">Çalıştır</string>
+    <string name="force_stop_app">Durmaya zorla</string>
+    <string name="restart_app">Yeniden başlat</string>
+    <string name="failed_to_update_sepolicy">%s için SELinux kuralları güncellenemedi</string>
 </resources>
