Changed some Turkish translations (#707)

--- a/manager/app/src/main/res/values-tr/strings.xml
+++ b/manager/app/src/main/res/values-tr/strings.xml
@@ -29,17 +29,17 @@
     <string name="install">Yükle</string>
     <string name="reboot">Yeniden başlat</string>
     <string name="settings">Ayarlar</string>
-    <string name="reboot_userspace">Hızlı yeniden Başlat</string>
-    <string name="reboot_recovery">Kurtarma modunda Başlat</string>
-    <string name="reboot_bootloader">Bootloader modunda Başlat</string>
-    <string name="reboot_download">İndirme modunda Başlat</string>
-    <string name="reboot_edl">EDL modunda Başlat</string>
+    <string name="reboot_userspace">Hızlı yeniden başlat</string>
+    <string name="reboot_recovery">Kurtarma modunda başlat</string>
+    <string name="reboot_bootloader">Bootloader modunda başlat</string>
+    <string name="reboot_download">İndirme modunda başlat</string>
+    <string name="reboot_edl">EDL modunda başlat</string>
     <string name="about">Hakkında</string>
     <string name="module_uninstall_confirm">%s modülünü kaldırmak istediğinizden emin misiniz?</string>
     <string name="module_uninstall_success">%s kaldırıldı</string>
-    <string name="module_uninstall_failed">Kaldırılamadı: %s</string>
+    <string name="module_uninstall_failed">%s kaldırılamadı</string>
     <string name="module_version">Sürüm</string>
-    <string name="module_author">Yazar</string>
+    <string name="module_author">Geliştirici</string>
     <string name="module_overlay_fs_not_available">overlayfs mevcut değil, modül çalışamıyor!</string>
     <string name="refresh">Yenile</string>
     <string name="show_system_apps">Sistem uygulamalarını göster</string>
@@ -68,7 +68,7 @@
     <string name="profile_selinux_context">SELinux içeriği</string>
     <string name="profile_umount_modules">Modüllerin bağlantısını kes</string>
     <string name="failed_to_update_app_profile">%s için uygulama profili güncellenemedi.</string>
-    <string name="require_kernel_version">Mevcut kernel versiyonu %d yöneticinin düzgün çalışabilmesi için çok düşük. Lütfen %d veya yukarısına yükseltin!</string>
+    <string name="require_kernel_version">Mevcut kernel sürümü %d olup, yöneticinin düzgün çalışabilmesi için çok düşük. Lütfen %d veya yukarısına yükseltin!</string>
     <string name="settings_umount_modules_default">Varsayılan olarak modüllerin bağlantısını kesin</string>
     <string name="settings_umount_modules_default_summary">Uygulama profillerindeki \"Modüllerin bağlantısını kesme\" seçeneği için varsayılan değer. Etkinleştirilirse, profil ayarı yapılmamış uygulamalar için modüllerin sistemde yaptığı tüm değişiklikler kaldırılacaktır.</string>
     <string name="profile_umount_modules_summary">Bu seçeneğin etkinleştirilmesi ile, bu uygulama için modüller tarafından değiştirilen tüm dosyaların KernelSU tarafından geri alınmasına izin verilecektir.</string>
