--- a/manager/app/src/main/res/values-zh-rTW/strings.xml
+++ b/manager/app/src/main/res/values-zh-rTW/strings.xml
@@ -54,7 +54,7 @@
     <string name="about_source_code"><![CDATA[在 %1$s 中檢視原始碼<br/>加入我們的 %2$s 頻道]]></string>
     <string name="profile_umount_modules">解除安裝模組</string>
     <string name="failed_to_update_app_profile">無法更新 %s 應用程式設定檔</string>
-    <string name="require_kernel_version">目前安裝的核心版本 %d 過低，管理器無法正常工作，請升級核心版本至 %d 或以上！</string>
+    <string name="require_kernel_version">目前安裝的 KernelSU 版本 %d 過低，管理器無法正常工作，請升級核心 KernelSU 版本至 %d 或以上！</string>
     <string name="settings_umount_modules_default">預設解除安裝模組</string>
     <string name="settings_umount_modules_default_summary">應用程式設定檔中「解除安裝模組」的全域預設值，如果啟用，將會為沒有設定檔的應用程式移除所有模組針對系統的修改。</string>
     <string name="profile_umount_modules_summary">啟用後將允許 KernelSU 為本應用程式還原被模組修改過的檔案。</string>
