manager: show changelog before update module

--- a/manager/app/src/main/res/values/strings.xml
+++ b/manager/app/src/main/res/values/strings.xml
@@ -84,4 +84,5 @@
     <string name="force_stop_app">Force Stop</string>
     <string name="restart_app">Restart</string>
     <string name="failed_to_update_sepolicy">Failed to update SELinux rules for: %s</string>
+    <string name="module_changelog">Changelog</string>
 </resources>
