--- a/manager/app/src/main/res/values/strings.xml
+++ b/manager/app/src/main/res/values/strings.xml
@@ -79,7 +79,7 @@
     <string name="module_update">Update</string>
     <string name="module_downloading">Downloading module: %s</string>
     <string name="module_start_downloading">Start downloading: %s</string>
-    <string name="new_version_available">New version: %s is available, click to download</string>
+    <string name="new_version_available">New version: %s is available, click to upgrade</string>
     <string name="launch_app">Launch</string>
     <string name="force_stop_app">Force Stop</string>
     <string name="restart_app">Restart</string>
