--- a/manager/app/src/main/res/values-zh-rCN/strings.xml
+++ b/manager/app/src/main/res/values-zh-rCN/strings.xml
@@ -80,4 +80,17 @@
     <string name="restart_app">重新启动</string>
     <string name="failed_to_update_sepolicy">为：%s 更新翻译失败</string>
     <string name="module_changelog">更新日志</string>
+    <string name="settings_profile_template">App Profile 模版</string>
+    <string name="settings_profile_template_summary">管理本地和在线的 App Profile 模版</string>
+    <string name="app_profile_template_create">创建模版</string>
+    <string name="app_profile_template_edit">编辑模版</string>
+    <string name="app_profile_template_id">模版 id</string>
+    <string name="app_profile_template_id_invalid">模版 id 不合法！</string>
+    <string name="app_profile_template_name">名字</string>
+    <string name="app_profile_template_description">描述</string>
+    <string name="app_profile_template_save">保存</string>
+    <string name="app_profile_template_delete">删除</string>
+    <string name="app_profile_template_view">查看模版</string>
+    <string name="app_profile_template_readonly">只读</string>
+    <string name="app_profile_template_id_exist">模版 id 已存在！</string>
 </resources>
