--- a/manager/app/src/main/res/values/strings.xml
+++ b/manager/app/src/main/res/values/strings.xml
@@ -85,4 +85,17 @@
     <string name="restart_app">Restart</string>
     <string name="failed_to_update_sepolicy">Failed to update SELinux rules for: %s</string>
     <string name="module_changelog">Changelog</string>
+    <string name="settings_profile_template">App Profile Template</string>
+    <string name="settings_profile_template_summary">Manage local and online template of App Profile</string>
+    <string name="app_profile_template_create">Create Template</string>
+    <string name="app_profile_template_edit">Edit Template</string>
+    <string name="app_profile_template_id">id</string>
+    <string name="app_profile_template_id_invalid">Invalid template id</string>
+    <string name="app_profile_template_name">Name</string>
+    <string name="app_profile_template_description">Description</string>
+    <string name="app_profile_template_save">Save</string>
+    <string name="app_profile_template_delete">Delete</string>
+    <string name="app_profile_template_view">View Template</string>
+    <string name="app_profile_template_readonly">readonly</string>
+    <string name="app_profile_template_id_exist">template id already exists!</string>
 </resources>
