--- a/manager/app/src/main/res/values/strings.xml
+++ b/manager/app/src/main/res/values/strings.xml
@@ -95,4 +95,11 @@
     <string name="app_profile_template_view">View Template</string>
     <string name="app_profile_template_readonly">readonly</string>
     <string name="app_profile_template_id_exist">template id already exists!</string>
+    <string name="app_profile_import_export">Import/Export</string>
+    <string name="app_profile_import_from_clipboard">Import from clipboard</string>
+    <string name="app_profile_export_to_clipboard">Export to clipboard</string>
+    <string name="app_profile_template_export_empty">Can not find local template to export!</string>
+    <string name="app_profile_template_import_success">Imported successfully</string>
+    <string name="app_profile_template_sync">Sync online templates</string>
+    <string name="app_profile_template_save_failed">Failed to save template</string>
 </resources>
